chore: atualiza config de ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,16 @@
     "skipLibCheck": true,
     "strictNullChecks": false,
     "noImplicitAny": false,
+    "resolveJsonModule": true,
     "strictBindCallApply": false,
     "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+        "@application/*": ["./src/application/*"],
+        "@helpers/*": ["./src/helpers/*"],
+        "@infra/*": ["./src/infra/*"],
+        "@test/*": ["./src/test/*"]
+    }
   }
 }
